<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/detail_img_width"
            android:layout_height="@dimen/img_height"
            android:id="@+id/detail_img"
            android:src="@drawable/camera_alert"
            android:layout_gravity="center"
            android:contentDescription="@string/movieimage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detail_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_label"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/movie_title"
                android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            android:text="@string/default_title"
            android:layout_marginLeft="@dimen/margin_left"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/desc_label"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/overview"
                android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_desc"
            android:layout_marginLeft="@dimen/margin_left"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:text="@string/default_desc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_label"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/release_date"
                android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:id="@+id/movie_release"
            android:text="@string/default_release_date"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vote_label"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/vote_average"
                android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_vote_average"
            android:text="@string/default_rating"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fav_label"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/fav_movie"
                android:textSize="@dimen/text_size"/>
        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_fav_button"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_label"
            android:textColor="@color/colorAccent"
            android:text="@string/movie_trailers"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_recycler">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/review_text"
            android:textColor="@color/colorAccent"
            android:text="@string/movie_reviews"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_recycler">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    </LinearLayout>

</ScrollView>